Fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
      font-size: 4em;
 	 font-weight: 400;
 	 line-height: 1em;
-	 margin: 0em 0 0.3em;
+	 margin: 0em 0 0.4em;
 	 color: #000000;
 	}	
 	h2 {
@@ -265,10 +265,10 @@
 	display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 16px;
 	}
 	.logo-row {
 	margin: 0px auto;
-	padding: 12px;
 	}
 	.logo {
 	width: 100%;
